  (Jacques Garrigue and Takafumi Saikawa,
   review by Gabriel Scherer and Leo White)

- #10007: Driver.compile_common: when typing a .ml file, return the
  compilation unit signature (inferred or from the .cmi) in addition
  to the implementation and the coercion.
  (Leandro Ostera, review by Gabriel Scherer and Thomas Refis)

* #10061, #10078, #10187: remove library `ocamlopttoplevel`, remove modules
  `Opttoploop`, `Opttopstart`, which are replaced by `Toploop` and `Topstart` in
  library `ocamltoplevel`, made available in native code.

- #10124: remove duplicated code from the native toplevel, split toplevel
  implementation into the shared part (`Topcommon`, etc.) and specific ones
  (`Topeval`, `Trace`, `Topmain`).

* #10086: add the commands `make list-parse-errors` and `make
  generate-parse-errors` to generate a set of syntactically incorrect
  sentences that covers all error states of the LR automaton. Add these
  sentences to the test suite. This can be used to evaluate the quality of the
  parser's syntax error messages and (in the future) to evaluate the impact of
  changes in the parser.
  (François Pottier, review by Gabriel Scherer and Xavier Leroy.)

- #10090: Distinguished constructors for ref variables at lambda level
  (Keryan Didier, review by Gabriel Scherer and Vincent Laviron)

- #10113: add a `-timeout` option to ocamltest and use it in the test suite.
  (Xavier Leroy and Gabriel Scherer, review by Sébastien Hinderer
   and David Allsopp)

- #10311: Separate the constraint-solving part of Typecore.type_pat into
  specific solver functions.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

### Build system:

- #9191, #10091, #10182: take the LDFLAGS variable into account, except on
  flexlink-using systems.
  (Gabriel Scherer, review by Sébastien Hinderer and David Allsopp,
   report by Ralph Seichter)

- #10156: configure script: fix sockets feature detection.