@@ -49,6 +49,9 @@ val str : bool
 val objext : string
 (** Extension of object files *)
 
+val libext : string
+(** Extension of library files *)
+
 val asmext : string
 (** Extension of assembly files *)
 
