@@ -34,7 +34,7 @@ program = "main_obj.${objext}"
 all_modules = "dynlink.cma entry.c main.ml"
 ****** script
 script = "${mkdll} -maindll -o main.dll main_obj.${objext} entry.${objext} \
-                   ${ocamlsrcdir}/runtime/libcamlrun.lib ${bytecc_libs}"
+                   ${ocamlsrcdir}/runtime/libcamlrun.${libext} ${bytecc_libs}"
 ******* script
 script = "${csharp_cmd}"
 ******** run
@@ -70,7 +70,7 @@ program = "main_obj.${objext}"
 all_modules = "dynlink.cmxa entry.c main.ml"
 ****** script
 script = "${mkdll} -maindll -o main.dll main_obj.${objext} entry.${objext} \
-                   ${ocamlsrcdir}/runtime/libasmrun.lib ${nativecc_libs}"
+                   ${ocamlsrcdir}/runtime/libasmrun.${libext} ${nativecc_libs}"
 ******* script
 script = "${csharp_cmd}"
 ******** run
